--- a/cotizador_acerta/templates/cotizar/email.html
+++ b/cotizador_acerta/templates/cotizar/email.html
@@ -453,6 +453,20 @@
 					                              <h5 style="text-align: right;"> Prima Mensual: B/. {{ cotizacion.prima_mensual|floatformat:2 }}</h5>
 					                              <h5 style="text-align: right;">Puedes pagar de Contado por: B/. {{ cotizacion.prima_pagoContado|floatformat:2 }}</h5>
 					                              {% endif %}
+					                            </div><br><br>
+					                            <div class="text-left">
+					                            	<p>
+					                            		-Esta cotización tiene validez de 30 días
+
+														-La prima calculada está sujeta a confirmación de las declaraciones del contratante y revisión/aprobación por parte de la Compañía, del historial de Tránsito del conductor nombrado
+
+														-Si el conducto de Pago es Electrónico (TCR) o transferencia de fondos (ACH), tiene la opción de realizar hasta 10 pagos mensuales; de lo contrario el máximo será hasta 6 mensualidades.
+
+														-En caso de contar con cualquier extra adicional que desee asegurar y cuyo valor sea mayor al 5% del valor del automóvil deberán ser detalladas, además presentar copia de la factura de las extras.  El seguro para extras se cotizará aparte y está sujeto a inspección
+
+														-Este documento no constituye un contrato de seguros, es únicamente para propósito de ilustración
+
+														-La Compañía podrá pagar por la Indemnización en dinero o podrá reparar el automóvil.  En caso de que la Compañía opte por reparar el automóvil, no incurrirá en responsabilidad alguna por razón del tiempo que se utilice en la reparación del automóvil.</p>
 					                            </div>
 												<br><br>
 												Saludos Cordiales,
