--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -314,7 +314,7 @@
             increaseArea: '5%' // optional
         });
 
-        $("#id_mail_corredor").val({{ request.user.email }});
+        $("#id_mail_corredor").val("{{ request.user.email }}");
 
         $( '#id_endoso' ).parent().parent().css("margin-top", "-8%");
         {% if not update %}
