--- a/cotizador_acerta/templates/administrador/base_admin.html
+++ b/cotizador_acerta/templates/administrador/base_admin.html
@@ -739,6 +739,16 @@
     <!--<script src="{% static 'plugins/chartjs/Chart.min.js' %}"></script>-->
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <!--<script src="{% static 'dist/js/pages/dashboard2.js' %}"></script-->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-83151440-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
     {% endblock script %}
     {% block custom_script %}{% endblock custom_script %}
 
