--- a/cotizador_acerta/templates/base.html
+++ b/cotizador_acerta/templates/base.html
@@ -73,6 +73,16 @@
     <script src="{% static 'js/plugins/chartjs/Chart.min.js' %}"></script>
 
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-83151440-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 {% endblock script %}
 {% block custom_script %}{% endblock custom_script %}
 </div>
