--- a/cotizador_acerta/templates/base.html
+++ b/cotizador_acerta/templates/base.html
@@ -39,7 +39,7 @@
     {% endblock head %}
 </head>
 <body>
-<div class="wrap" style="position: absolute; width: 100%;">
+<div class="wrap" style="width: 100%;">
     {% block navbar %}
         {% include "navbar.html" %}
     {% endblock navbar %}
