--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -161,6 +161,9 @@
                     <a href="{% url 'register' %}">Registrar Corredor</a>
                   </li>
                   <li style="float: right;">
+                    <a href="{% url 'dashboard' %}">Administrador</a>
+                  </li>
+                  <li style="float: right;">
                     <a href="{% url 'corredor-vendedor-list' %}">Corredores y Vendedores</a>
                   </li>
                 {% endif %}
