--- a/cotizador_acerta/templates/reportes/dashboard.html
+++ b/cotizador_acerta/templates/reportes/dashboard.html
@@ -105,7 +105,7 @@
 					<h3 class="widget-user-username">Resumen Gerencial</h3>
 				{% if usuario.groups.first.name == 'corredor' %}
 					<h5 class="widget-user-desc"> {{ usuario.get_full_name|default:usuario.username }} - Corredor Acerta</h5>
-				{% elif usuario.groups.first.name == 'super_admin' %}
+				{% elif usuario.groups.first.name == 'super_admin' or usuario.groups.first.name == 'admin' %}
 					<h5 class="widget-user-desc">Admin Acerta - Administrador Acerta</h5>
 				{% else %}
 					<h5 class="widget-user-desc">{{ usuario.get_full_name|default:usuario.username }} - Vendedor Acerta</h5>
@@ -151,7 +151,7 @@
     </div>
 </div>
 <br>
-{% if usuario.groups.first.name == 'super_admin' %}
+{% if usuario.groups.first.name == 'super_admin' or usuario.groups.first.name == 'admin' %}
 <div class="row">
 	<div class="col-md-12">
 		<div class="box box-default color-palette-box">
