--- a/cotizador_acerta/templates/email_confirmation.html
+++ b/cotizador_acerta/templates/email_confirmation.html
@@ -161,7 +161,7 @@ p {padding: 0!important; margin-top: 0!important; margin-right: 0!important; mar
                                     <table width="352" border="0" cellpadding="0" cellspacing="0" align="center" style="text-align: center; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="fullCenter">
                                         <tr>
                                             <td valign="middle" width="100%" style="text-align: center; font-family: Helvetica, Arial, sans-serif; font-size: 19px; color: rgb(255, 255, 255); line-height: 26px; font-weight: bold; text-transform: uppercase;"class="fullCenter" >
-                                                <!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgbold', Helvetica; font-weight: normal;"><!--<![endif]--><singleline>Bienvenido a Seguros Acerta!</singleline><!--[if !mso]><!--></span><!--<![endif]-->
+                                                <!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgbold', Helvetica; font-weight: normal;"><!--<![endif]--><singleline>¡Bienvenido a Acerta Seguros!</singleline><!--[if !mso]><!--></span><!--<![endif]-->
                                             </td>
                                         </tr>
                                         <tr>
