--- a/cotizador_acerta/templates/reportes/corredor_detail.html
+++ b/cotizador_acerta/templates/reportes/corredor_detail.html
@@ -37,7 +37,11 @@
 					{% endif %}
 					<li><a href="#">Correo <span class="pull-right badge bg-orange">{{usuario.email}}</span></a></li>
 					<li><a href="#">Cotizaciones <span class="pull-right badge bg-red">{{ num_cot }}</span></a></li>
-					<li><a href="{% url 'edit-user' usuario.pk %}">Editar <span class="pull-right badge bg-orange"></span></a></li>
+					{% if usuario.groups.first.name == 'corredor' %}
+						<li><a href="{% url 'edit-vendedor' usuario.pk %}">Editar <span class="pull-right badge bg-orange"></span></a></li>
+					{% else %}
+						<li><a href="{% url 'edit-user' usuario.pk %}">Editar <span class="pull-right badge bg-orange"></span></a></li>
+					{% endif %}
 				</ul>
 			</div>
 		</div>
