--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -185,6 +185,13 @@
                     <div class="login-box-body">
                         <h3 id="subtitulo"><strong>Datos del Cliente</strong></h3>
                         <div class="col-md-6">
+                            <h3 id="subtitulo"><strong>Planes: </strong></h3>
+                            <label for="sel1">Seleccione el plan que corresponda: </label>
+                            <select class="form-control" id="sel1">
+                                {% for plan in planes %}
+                                <option>{{plan}}</option>
+                                {% endfor %}
+                            </select>
                             <h3 id="subtitulo"><strong>Persona</strong></h3>
                             {% bootstrap_field form.nombre layout='horizontal' show_label=False field_class='form-field' %}
                             {% bootstrap_field form.apellido layout='horizontal' show_label=False field_class='form-field' %}
