--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -12,6 +12,9 @@
 {% bootstrap_messages %}
 
 {% load static %}
+{% block extrahead %}
+  {{form.media}}
+{% endblock extrahead %}
 {% block extracss %}
 <link href="{% static 'plugins/iCheck/square/grey.css' %}" rel="stylesheet">
 <!-- Select2 -->
@@ -189,7 +192,7 @@
                             {% bootstrap_field form.nombre layout='horizontal' show_label=False field_class='form-field' %}
                             {% bootstrap_field form.apellido layout='horizontal' show_label=False field_class='form-field' %}
                             {% bootstrap_field form.sexo layout='horizontal' show_label=False show_help=True field_class='form-field' %}
-                            {% bootstrap_field form.edad layout='horizontal' show_label=False field_class='form-field' %}
+                            {% bootstrap_field form.fecha_nacimiento layout='horizontal' show_label=False field_class='form-field' %}
                             {% bootstrap_field form.tipo_id layout='horizontal' show_label=False field_class='form-field' %}
                             {% bootstrap_field form.identificacion layout='horizontal' show_label=False field_class='form-field' %}
                             {% bootstrap_field form.estado_civil layout='horizontal'  show_label=False field_class='form-field' %}
@@ -1211,6 +1214,7 @@
 
     $(document).ready(function(){
         $('#id_valor_text').maskMoney();
+        $('#id_fecha_nacimiento').mask('0000/00/00', {placeholder: "F. Nacimiento (aaaa/mm/dd)"});
 
         $(document).click(function() {
             if($('#id_tipo_id_0').is(":checked")) {
@@ -1221,6 +1225,8 @@
         });
     });
 
+</script>
+<script type="text/javascript">
 </script>
 
 {% endblock custom_script %}
