--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -1225,5 +1225,23 @@
     });
 
 </script>
+<script>
+jQuery(document).ready(function($) {
+      var testHistorial =    /^[0-8]$/;
+      jQuery('input#id_historial_transito').bind('input propertychange', function() {
+        if (testHistorial.test(jQuery(this).val()))
+        {
+            $(".historial_transito-validacion").remove();
+           jQuery('button.calculate').prop("disabled",false);
+         } else
+         {
+           $(".historial_transito-validacion").remove();
+            $('#id_submit').prop('disabled', true);
+            $(this).parent().after("<div class='form-field historial_transito-validacion' style='color:red; margin-top: 5%; margin-bottom: -4%;'>Introduzca un historial entre 0-8</div>");
+           jQuery('button.calculate').prop("disabled",true);
+         }
+       });
+});
+</script>
 
 {% endblock custom_script %}
