add options ind

--- a/cotizador_acerta/templates/cotizar/email.html
+++ b/cotizador_acerta/templates/cotizar/email.html
@@ -294,6 +294,12 @@
 										<tbody><tr>
 											<td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: rgb(63, 67, 69); line-height: 24px;" mc:edit="41">
 												<!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->A continuación le presentamos la siguiente cotización realizada por el corredor {{cotizacion.corredor.first_name}} {{ cotizacion.corredor.last_name }} para el vehiculo {{cotizacion.conductor.marca.nombre}} {{cotizacion.conductor.modelo.nombre}} {{cotizacion.conductor.anio}}, valorado en B/. {{valor_vehiculo}} <!--[if !mso]><!--></span><!--<![endif]-->
+												<br>
+												<br>
+												<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->La opción sugerida por su corredor es la {{ opcion }}. Para ver en detalle las diferentes opciones que varían según los deducibles, vea el PDF adjunto. <!--[if !mso]><!--></span>
+											</td>
+											<td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: rgb(63, 67, 69); line-height: 24px;" mc:edit="41">
+												<!--[if !mso]><!--><!--<![endif]-->
 											</td>
 										</tr>
 									</tbody></table>
