--- a/cotizador_acerta/templates/polizas/pago.html
+++ b/cotizador_acerta/templates/polizas/pago.html
@@ -77,7 +77,7 @@
 
                                 {% bootstrap_field form.numero_tarjeta show_label=False %}
                                 {% bootstrap_field form.cvv show_label=False %}
-                                <div class="form-group">
+                                <!-- <div class="form-group">
                                     <label class="sr-only control-label" for="id_expiracion_tdc">Fecha de Expiracion</label>
                                     <div class="input-group date" id="id_expiracion_tdc_picker">
                                         <input class="form-control" id="id_expiracion_tdc" name="expiracion_tdc" placeholder="Fecha de Expiracion" required="required" title="" type="text">
@@ -85,7 +85,7 @@
                                             <span class="glyphicon glyphicon-calendar"></span>
                                         </span>
                                     </div>
-                                </div>
+                                </div> -->
                                 {% bootstrap_field form.nombre_persona show_label=False %}
 
                                 {% buttons %}
