Bugs de generación de PDF, arreglados.

--- a/cotizador_acerta/templates/polizas/generacion_PDF.html
+++ b/cotizador_acerta/templates/polizas/generacion_PDF.html
@@ -1,1 +1,1 @@
-<li><a href="{% url 'solicitar' 346 %}">Probar generación de PDF</a></li>
+<li><a href="{% url 'generacion' %}">Probar generación de PDF</a></li>
